--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -61,7 +61,7 @@
 - DR 2MK
 - {端}
   - LP
-    - 6MP(+2)
+    - 6MP(+2): ヒットでLP/2LPが入る
     - LK
       - 前投げ
 
@@ -83,17 +83,26 @@
 
 ## 強サンダー(+1)-PP: 26
 
-- 2MK, LK, 強サンダー(+1)-PP: 同じ状況でループする
-- 2HP, 強サンダーC: 相打ちから2HPが入る
-- 前投げ
-- 後退: シミー
+- ステップ
+  - 2MK, LK, 強サンダー(+1)-PP: 同じ状況でループする
+  - 2HP, 強サンダーC: 相打ちから2HPが入る
+  - 前投げ
+  - 後退: シミー
+- {端}
+  - 弱バニ(+4)
+    - {ヒット}: +42
+      - 前J.HK
+    - {ガード}: +2
+      - 2LK, 2LP, LK, 強サンダー(+1)-PP, ...
+      - J.HP/バクステ: シミー
 
 持続なしの場合よりも少し遠くて、ゼロ距離にならない。
 ステップから後退がシミーになる。
 
 主なルート:
 
-- LP/2LP/2LK, 2LP 2回, LK, 強サンダー
+- LP/2LP, 2LP 2回, LK, 強サンダー
+- 2LK, 2LP, LK, 強サンダー
 - セイスモ, 強サンダー
 
 ## {空} 強サンダーPP
