--- a/shared/communication/frameworks/negotiation/交渉.md
+++ b/shared/communication/frameworks/negotiation/交渉.md
@@ -29,3 +29,11 @@ https://qiita.com/Saku731/items/c43137a6f4bf7166490a
 
 交渉よりも戦争が先。
 まず武力を示さないと、交渉の席に着けない。
+
+交渉の基本
+
+- 交渉相手を知る
+- 入念に準備する
+- 勝負ではない
+- 事実でないなら口にしない
+- チャンスを逃さない
