--- a/shared/technology/engineering/技術者.md
+++ b/shared/technology/engineering/技術者.md
@@ -23,3 +23,7 @@
 
 「みんなが根性出さなくてもいいような仕組みを作るのがエンジニアなので、エンジニアは根性いる。」
 https://x.com/eeveekawaiiiiii/status/1836544364136534371
+
+技術者は、考えたことを科学的に検証しないといけない。
+
+技術者であっても、物を作るだけじゃなくて、その影響まで考える。
