--- a/shared/family/marriage/結婚.md
+++ b/shared/family/marriage/結婚.md
@@ -127,3 +127,5 @@
 - 何が「家のためになった」「働いた」と言えるか、逆に何がそうでないか
 
 結婚しない人はそんなに稼がなくてもいいので、働かなくなる可能性も高い。
+
+家、というか遺伝子を守ることだけ考えたら、女性はパートナーというよりも庇護の対象。子どもを作って、相手に何も求めずにただ守る。
