--- a/games/Street-Fighter/Six/守りの選択肢.md
+++ b/games/Street-Fighter/Six/守りの選択肢.md
@@ -32,6 +32,8 @@
 
 ガードでフレーム有利を待って割り込むのと、発生の遅い技に割り込むのが守りの基本。ただ、反射神経が悪いとどちらも厳しい。どこかで割り切って無敵技で暴れるか、ジャンプで暴れるしかない。投げ抜けはしない。
 
+歩き投げはマイナスから投げているので、ガードして最速暴れで勝てる。弱攻撃で切り返せない技、例えば異常に離れる技や有利を取られる技、だけは見極めて暴れないようにしないといけない。
+
 ## ジャンプ入れっぱ
 
 相手の投げや様子見から離れられる。
