--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -791,3 +791,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 
 誰かに足りないものを探すのがビジネスの基本。ないものを与える。
 ただ、自分が与えられるものを探さないといけない。ビジネスのためにわざわざ何かを欲するのは面倒。
+
+趣味を仕事にするなら、「筆が早い」のは一つの必須技能。同じ質なら量が多い方がビジネスにしやすい。
