--- a/shared/care/responsibility/tips/自由.md
+++ b/shared/care/responsibility/tips/自由.md
@@ -90,3 +90,5 @@
 
 自由というのは自然でないこと。自然な法則から外れること。
 まぁ、物理法則などから外れているように見えても実際は法則に従っていることもある。空を飛ぶとか。
+
+自由に生きるためには暴力と財力の両面を備えないといけない。誰かに援助されずとも、妨害されたとしても、生き残ること。そうすれば誰かの思惑に左右されることもない。
