--- a/shared/cooking/料理を左右する要素.md
+++ b/shared/cooking/料理を左右する要素.md
@@ -1,63 +1,2 @@
-## 水分量
-
-水分量が少ないとパサパサして食感が悪い。味も落ちる。
-
-## 塩分量
-
-塩分量は全体の 0.8-0.9 % くらい、血液の塩分量と同じくらいが美味しく感じる。
-
-長く加熱すると水分が飛んで全体重量が減るので、少なめに入れるか、加熱後に計り直してもいい。
-
-旨味が強すぎると塩味を感じにくくなるので、塩分量を増やさないといけなくなる。
-
-米と合わせるおかずなら塩分量は多くてもいい。1.5-2.0 %くらい。
-
-醤油が全体の10%だとだいたい1.6%が塩分。醤油ベースで味付けするなら、全体に対して醤油5%が基本。おかずなら10%でもいい。
-
-味が薄い時はとにかく塩を足して調整するのが基本。まずは少なめに作って仕上げに足す。
-
-旨味が強すぎると塩味が弱められるので、あまり旨味ばかりあればいいというわけでもない。
-塩分が多すぎると高血圧になりやすいので気をつけよう。
-
-塩は結局どこの塩でも塩だけど、粒の大きさで印象が変わるのでミルにはこだわってもいい。あと焼き塩は粒子が細かくなっていて溶けやすい。
-というか産地によって味が違ったら塩、塩化ナトリウムじゃない可能性がある。塩以外のミネラル。
-
-濃口醤油は塩分量16%くらいなので、塩の代わりに塩の分量の6.25倍入れたら同じくらい。その分水を減らす。
-
-## 火加減
-
-加熱しすぎると水分量が減ってパサパサする。細胞が壊れて水分が流出している。味の成分も加熱によって壊れることがある。
-ジューシーに仕上げるには、加熱を抑えつつ、肉には熱を通して殺菌しないといけない。
-
-基本的に弱火か中火で十分。
-最後焦がすときに強めて少し加熱するくらい。
-
-フッ素加工の鍋は強火に弱いので、中火以下で使う。
-強火でお湯を沸かすような鍋はフッ素加工でない方がいい。
-
-ガスコンロの火加減:
-
-- とろ火: 火が鍋の底につかない
-- 弱火: 火が鍋の底につくかつかないか
-- 中火: 火が鍋の底にしっかりつく
-- 強火: 中火より強い
-
-電気コンロの火加減:
-
-- 弱火: 250W
-- 中火: 750W
-- 強火: 1500W
-
-コンロの最大が強火ではない。
-
-炒め物は揚げ物。油の温度管理が重要。
-
-低温調理は食中毒に注意。
-政府のガイドラインに従うといい。
-https://www.fsc.go.jp/foodsafetyinfo_map/shokuhniku_teionchouri.html
-例えば、鶏肉の加熱で 63 度なら、63 度になってから温度を維持して 30 分以上、とされている。
-
-卵は加熱の温度によって粘りが出たり、完全に固まったりする特殊な食材。
-
-温度を強火に上げても火が入るのは早くならない。
-むしろ強火以上に温度を上げるのは表面だけ焦がして中に火を通したくない時。
+- 水分量（火加減）
+- 塩分量（塩加減）
