--- a/shared/information/情報.md
+++ b/shared/information/情報.md
@@ -189,3 +189,5 @@ https://share.google/qJIl8gO83xEZQZjbk
 情報を簡単に得られるのに全部得る前に考え始める人はあんまり仕事できなそう。ゲーム実況とか見てると話を全部聞く前に考察を始める人がたまにいる。
 
 情報は判断や行動の基礎の文脈。リスクと関連が深い。
+
+「情報とは価値が高いうちに利用するものぞ？」『転スラ』
