--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -6,7 +6,7 @@
   - {ガード}
     - ガード
 
-+5以上の起き上がりで頻出。
++5以上の起き上がりや確反で頻出。
 相打ちになった場合の処理も考えると、強サンダー(+1)-PPから重ねる練習でもいい。
 
 モダンだと起き上がりに重ねて中攻撃に繋がるルートがこれしかないので優先度が高い。
@@ -30,6 +30,8 @@
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
 モダンならAC3で簡単。
+モダンなら中サンダーPPの方がいい。
+
 クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。
 
 ## 柔道
