--- a/shared/communication/media/language/言葉にする.md
+++ b/shared/communication/media/language/言葉にする.md
@@ -34,3 +34,5 @@ https://youtu.be/8FHo4BKf8hk?si=H7tmy8LWTURy3Ger
 言葉を発生するのがSpeaking、誰かに聞かせるのはTalk。
 
 伝えたい言葉が見つからないならそれを言葉にする。「言葉にできない」を言葉にする。
+
+言葉にできるのと、それを相手が理解できるのと、相手を動かすのは別。
