--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -13,6 +13,11 @@
 セイスモ、HJ空バニ、2HP、DR 2MK、DR 6MP、DR 6HKなどで触りに行く。近いとLPも使うことがある。
 2MP、MK、2MK、などはリターンがないのであまり当てに行くのには使わない。どちらかというと置き。
 
+0Fから無敵になる対空がないキャラはHJじゃない低空バニでも対応するのが特に難しい。ダルシム、ラシード、ベガ、JP、キンバリーあたり。
+まぁ、当たるまで30Fくらいなので、無敵のある対空技でもかなり狙ってないと難しい。狙ってると垂直バニで誘われることもあるし。
+
+バニに対空を狙ってそうなら、垂直低空バニで誘って大足やラッシュでもいい。
+
 ## 牽制
 
 自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
