--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -233,6 +233,14 @@ https://note.com/blacktristars/n/ncbecd2314c33
 - A:
   - アベレージヒッター
 
+## 総合力
+
+全体をちょっとずつ上げるより、ポジションに合ったいくつかの能力に絞って上げる。それ以外はFのままでもいい。
+
+Dが標準なので、まずはEよりもDを目指すのが基本。
+
+星100くらい凡人をしっかり育てて合計300くらい。初期値が高い選手はもっと上を目指せる。
+
 ## 打撃力
 
 - 守備で走力が必要なら、パワーより走力を優先する
@@ -290,6 +298,10 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 打撃に使うだけの走力がどれくらいあればいいかいまいちわかってない。Bで結構内野安打になる感じはする。Cだと足りない感じ。
 
+パワーをD以上にするなら、Aにするつもりで上げたい。弾道4で長打ボーナスが乗る。
+
+打撃系はまずはDFF、BFC、BDCあたりが中継点。外野も走Cあればとりあえずほとんど拾える。
+
 ## 守備力
 
 - 打球に追いつけるようになるまで捕球はFでいい
@@ -309,6 +321,8 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 肩は内野の対角線に投げるのに最低限Dはないと全然間に合わない。できればCは欲しいけど優先度は低い。
 
+外野の肩を上げるならBくらいはないと意味ない。タッチアップを止められない。最後でいい。
+
 ## 補欠
 
 - ミートまたは走力優先
@@ -327,7 +341,7 @@ https://note.com/blacktristars/n/ncbecd2314c33
 
 1. F-F-F-D-E-F: 弱小（最低限の盗塁を防ぐ）
 2. C-D-E-D-E-E: 中堅
-3. B-D-E-C-E-E: 強豪
+3. B-D-F-B-D-E: 強豪
 
 捕球が高いと後逸しにくい。
 
@@ -360,7 +374,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 1. D-F-E-F-F-F: 弱小
 2. C-F-C-F-F-F: 中堅
-3. A-D-B-F-E-E: 強豪
+3. A-A-C-F-E-F: 強豪
 
 ## 二塁手
 
@@ -374,7 +388,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 1. F-F-D-F-E-F: 弱小、最低限の二遊間
 2. E-F-C-F-E-F: 中堅
-3. C-E-A-E-B-F: 強豪
+3. A-F-A-F-A-F: 強豪
 
 ## 三塁手
 
@@ -386,7 +400,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 1. E-F-F-D-F-F: 弱小（最低限の内野安打を防ぐ）
 2. C-F-E-D-F-F: 中堅
-3. B-D-C-C-E-F: 強豪
+3. A-D-B-C-F-F: 強豪
 
 肩力Dくらいないと左方向への打球が全部内野安打になる。
 
@@ -404,7 +418,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 1. F-F-D-F-E-F: 弱小
 2. F-F-C-E-E-F: 中堅
-3. C-F-A-D-B-F: 強豪
+3. A-F-A-F-A-F: 強豪
 
 走力よりも守備力を上げたほうが守りは強い。
 
@@ -420,7 +434,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 
 1. F-F-C-F-F-F: 弱小、外野フライがだいたい取れる
 2. D-F-C-F-F-F: 中堅
-3. C-D-A-E-E-E: 強豪
+3. A-D-S-F-E-F: 強豪
 
 まずはボールに追いつかないとどうしようもない。
 
@@ -559,8 +573,6 @@ Eは最低限で、Fはかなり悪い。ただ、できれば使うステータ
 パワーBあったら弾道2にはしたい。
 
 かく乱は走者の威圧感で、守備力も下がる。走者として出ないと発動しないので威圧感よりも機会は少ない。
-
-Dが標準なので、まずはEよりもDを目指すのが基本。
 
 ## 性格の違い
 
