--- a/shared/human/being/well/趣味.md
+++ b/shared/human/being/well/趣味.md
@@ -15,3 +15,12 @@
 逆に、趣味で優劣がつくのが嫌なら誰にも公開しないとか、親しい人にだけ公開するとか、隠した方がいい。
 
 趣味は「自分のこだわりを自分のためだけに好きなだけ追求できる」というメリットがある。「好きだから好き」でいい。自分のこだわりに理由などない。むしろ理由がなくていいのが趣味だ。
+
+趣味にはこだわりがあるので、仕事と相容れない場合もある。仕事というのは大抵、誰かのこだわりを満たしてあげることだ。もちろん自分のこだわりを理解してくれる顧客に出会えるのは何よりの幸福だ。
+
+「趣味なんてな、自分のこだわり見付けていく作業みたいなもんだ。」
+『ふたりソロキャンプ』
+
+「俺のこだわりは俺だけのもんだろ？」
+「他人の土くれまで口を出すより、自分の土くれこねくり回してる方が俺は楽しいね。」
+『ふたりソロキャンプ』
