--- a/shared/leisure/余暇.md
+++ b/shared/leisure/余暇.md
@@ -90,3 +90,5 @@ Recreationは余暇に行う活動を、Leisureは余暇としての時間を指
 特に長期の休暇をバケーションという。
 
 普段、どうやって過ごしているか。
+
+東京に住んでても自然とかゆったりした時間とかに困った記憶が全くない。公園はたくさんあるし、カフェとかのテラスでのんびりしてもいいし、単に住宅街を散歩してもいいし。まぁ、自然と言っても高知みたいな何の手入れもされてなさそうなとこはないけど。
