--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -241,6 +241,8 @@ Dが標準なので、まずはEよりもDを目指すのが基本。
 
 星100くらい凡人をしっかり育てて合計300くらい。初期値が高い選手はもっと上を目指せる。
 
+合計160、CFFFFFくらいなら初期値が星50くらいでも1年間で伸ばせる。万能で2ヶ月、どれか一つに特化して10ヶ月くらい。星50はあまりいないので、合計180くらいが目安と考えてもいい。
+
 ## 打撃力
 
 - 守備で走力が必要なら、パワーより走力を優先する
@@ -252,18 +254,20 @@ Dが標準なので、まずはEよりもDを目指すのが基本。
 
 走力を伸ばさない場合:
 
-1. ミートD
-2. 走力E
-3. ミートC
-4. パワーD
+1. DFFFFF
+2. DFEFFF
+3. CFEFFF
+4. CDEFFF
 5. 弾道3
-6. パワーA
-7. 弾道4
+6. BDEFFF
+7. BAEFFF
+8. 弾道4
 
 走力を伸ばす場合:
 
-1. 走力C
-2. ミートC
+1. FFCFFF
+2. DFCFFF
+3. DFBFFF
 
 守備のために走力を上げるポジションの場合、ミートと走力が手順前後して、パワーは余裕がなければ上げなくてもいい。
 
@@ -302,6 +306,15 @@ Dが標準なので、まずはEよりもDを目指すのが基本。
 
 打撃系はまずはDFF、BFC、BDCあたりが中継点。外野も走Cあればとりあえずほとんど拾える。
 
+パワー型の選手でも、地方球場は狭すぎて、最奥まで飛ばしても足が遅いと二塁打にできないことが多い。まずは走力。
+
+ミートパワー型の選手の走力をEにするかFのままにするかも迷ってる。Eにしても大したことないのは確かだけど。
+
+打撃はミートDあれば2割くらいは打てる。まずはここが最低限。DFFFFFを目指す。ただ、守備優先。
+
+走力はCくらいまで上げてもなかなか内野安打にならないし、時間がかかる。Bは欲しい。
+二、遊、外は守備に必要だから走力優先だけど、そうでないならまずはミートを上げるべき。捕、一、三だな。ミートはDあればかなり違う。
+
 ## 守備力
 
 - 打球に追いつけるようになるまで捕球はFでいい
@@ -323,9 +336,36 @@ Dが標準なので、まずはEよりもDを目指すのが基本。
 
 外野の肩を上げるならBくらいはないと意味ない。タッチアップを止められない。最後でいい。
 
+栄冠では最終回の守備を伝令で底上げできるので、守備力や捕球よりも走力や肩力が重要。
+
+一三はどこで守備を伸ばすべきか。
+一三も守D捕Dくらいあるとかなりライン際の打球に強くなる。
+三は肩Dが最低限だけどできればCかBあるとさらにいいし。
+
+逆に外野手はかなり広い状況を走力だけで賄える。
+
+内野手は取れないときは結局取れないので、ミートから上げるのも無くはない。とりあえずDFFFFFにしてから、各ポジションに必要な守備に振る。これなら二遊もDFDFEFくらいから始めてもいいし。
+二遊はFFCFFFにしてからEFCFEFにするか、DFFFFFにしてからDFDFEFにするか、まだ迷ってる。
+
+まずは打撃よりも最低限の守備が優先。
+捕手なら肩D守E、
+一塁手は特になし、
+二塁手は走C守E、
+三塁手は肩D、
+遊撃手は走C守E、
+外野手は走C、
+あたりが目安。
+これくらいあるとだいぶ野球として形になる。
+二遊は走D守Eくらいでもいいけど、走力がCないと打撃が弱すぎるので守Eより走Cが優先。
+ただ、打線が繋がらないのも問題ではある。
+
+捕手って肩D守Fと肩E守Eだとどっちがいいんだろう。
+
+二遊もまずは肩を後回しでいい。まず内野ゴロをとって、二塁に投げる。
+
 ## 補欠
 
-- ミートまたは走力優先
+- CFFFFFまたはFFCFFFを目指す
 
 スタメン以外は代打や代走で出して経験値を稼ぎたいので、まずはミートか走力から上げる。ただ、代わりの守備も必要。一、三、外、投、あたりは代えやすい。
 
@@ -387,7 +427,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 目標:
 
 1. F-F-D-F-E-F: 弱小、最低限の二遊間
-2. E-F-C-F-E-F: 中堅
+2. D-F-B-F-E-F: 中堅
 3. A-F-A-F-A-F: 強豪
 
 ## 三塁手
@@ -417,7 +457,7 @@ DかCくらいで牽制できればまずは十分なので、一旦打撃能力
 目標:
 
 1. F-F-D-F-E-F: 弱小
-2. F-F-C-E-E-F: 中堅
+2. D-F-B-F-E-F: 中堅
 3. A-F-A-F-A-F: 強豪
 
 走力よりも守備力を上げたほうが守りは強い。
