--- a/shared/war/戦闘.md
+++ b/shared/war/戦闘.md
@@ -17,3 +17,5 @@
 対して、密着最大威力は頭突きか掌底。ただ、掌底は前のめりになるし、力の方向として関節周りを怪我しやすい。
 
 上半身への攻撃を避ける方法は、前に避けるダッキングと後ろに避けるスウェイバックがある。
+
+人同士の戦闘では人はなかなか死なないので、殺すのが目的でないなら殺す気であっても結果的に殺せずに離れることが多い。
