--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -84,3 +84,9 @@
 
 「やっぱ自分が心底心地いい時って、相手が我慢してるんだよな」
 https://x.com/torotakulove/status/1980816263103541501?s=61
+
+人との付き合いが浅い人はその分広く付き合った方がいい。広く浅く。深く付き合う人はリソースが足りなくなって狭くなりがち。
+
+どれだけ好みが違ってもお互いのことが好きなら付き合っていける。
+
+好みは周りと違う方が取り合いにならない。
