--- a/shared/thinking/新しいアイデアを考える.md
+++ b/shared/thinking/新しいアイデアを考える.md
@@ -26,3 +26,5 @@
 アイデアは何もないところから生まれない。
 これまで見てきたもの、受けてきた刺激から生まれる。
 その上で、オリジナルに昇華できるのは一握りの才能。
+
+アイデアを考える時はお互いに独立した複数の意見をまず集めるのが大事。いきなり会議を始めてはいけない。まずアイデアをそれぞれ出した上で、持ち寄って選別する。持ち寄ってそれぞれ確認した段階で新しいアイデアが出ることもあるが、それもまずは独立したアイデアがあってこそ。
