--- a/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
+++ b/games/Pawapro/2024/栄冠ナイン/栄冠ナインの選手育成.md
@@ -363,6 +363,8 @@ Dが標準なので、まずはEよりもDを目指すのが基本。
 
 二遊もまずは肩を後回しでいい。まず内野ゴロをとって、二塁に投げる。
 
+二遊は守備Eは欲しいけど、走力優先。まずはDEくらいを目指す。
+
 ## 補欠
 
 - CFFFFFまたはFFCFFFを目指す
