--- a/shared/achievement/task/タスク.md
+++ b/shared/achievement/task/タスク.md
@@ -39,3 +39,5 @@ https://qiita.com/ogix/items/fc493a0775900e02fbca?utm_source=Qiitaニュース&u
 期限付きのタスクもイテレーションの中にある。重要なら優先して対応するし、不要なら捨てる。
 
 タスク管理はタスクが必要になるまで忘れるためにある。忘れられないならタスク管理できているとは言えない。
+
+重要だけど緊急ではないタスクが一番楽しいところ。
