--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -18,6 +18,9 @@
 
 バニに対空を狙ってそうなら、垂直低空バニで誘って大足やラッシュでもいい。
 
+J.HKは空バニでキャンセルできる。
+アーマーでジャンプを受けてくるマリーザやザンギに強く出れる。
+
 ## 牽制
 
 自分が近づくというよりは、セイスモとセイスモフェイントで相手を動かす。
