--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -161,7 +161,7 @@
 
 - DR 弱セイスモ
 
-中バニ(+4)が重なるフレームだけど、中央ではガードされたあと投げに行けないので微妙。
+中バニ(+4)が重なるフレームだけど、中央ではガードされたあと投げに行けないので微妙。やるなら派生。
 
 ## セイスモ, JC 強バニ, 中サンダーPP: 30
 
@@ -178,6 +178,7 @@
 ## SA1: 24
 
 - ステップ: +3
+- DI: 無敵技以外で割り込めない
 
 ## SA2: 19
 
@@ -185,5 +186,5 @@
 
 ## SA3: 21
 
-- 前HJ: 最速無敵技が裏に出て当たらない
+- 前HJ.HK: 最速無敵技が裏に出て当たらない
 - DI: ジャンプできない
