--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -1,3 +1,12 @@
+## セイスモからハイジャンプコンボ
+
+- 弱/中セイスモ, JC 強空バニ, ODバニ, SA2/3
+
+コンボでも中距離の差し合いでも使う。
+
+クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。先行入力しない。
+モダンの場合は29SPの中空バニで妥協してもいい。強より短いので距離は限定される。
+
 ## 強攻撃から中攻撃に繋ぐコンボ
 
 - 2HP, 強サンダーC
@@ -26,13 +35,11 @@
     - 2HP, ...
     - 前進, 前投げ
     - 後退
-- 2HP, 弱セイスモ, JC 強バニ, SA1/2/3
+- 2HP, 弱セイスモ, JC 強バニ, SA
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
 
 モダンならAC3で簡単。
-モダンなら中サンダーPPの方がいい。
-
-クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。
+モダンなら中サンダーPPの方がいい。起き攻めは前進が伸びるけど同じ。
 
 ## 柔道
 
