--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -13,6 +13,10 @@
 
 この辺りからは2HPに繋いでおけば安牌。
 
+## 基本的なコンボ選択
+
+中サンダーは派生するとSAが当たらないので、弱サンダーにできるところは弱サンダーにする。普通の起き攻めも弱の方が強い。弱はガードされると確反があるので入れ込みなら中。立ち小足からは中しか繋がらない。
+
 ## ジャンプキャンセルのコツ
 
 ジャンプキャンセルはタイミングが大事。
@@ -252,3 +256,5 @@ HKで拾うコンボが結構あるのでMきついかも。
 HP(pc), 強サンダーC, 2HPルートはクソ減る。差し返しで狙えるとなおいいけど、発生が遅いので難しいところ。
 
 セイスモ, JC 強空バニは中空バニでも可。
+
+ヴァイパーはとりあえず大パンセイスモに繋げておけばどのSAにも繋がるのがえらい。
