--- a/shared/commerce/marketing/channels/イベント.md
+++ b/shared/commerce/marketing/channels/イベント.md
@@ -71,3 +71,5 @@ https://www.kokuchpro.com/
 サークルは常連ばかりになると常連も個別に集まったりして来なくなる。常に新しいメンバーを取り込んでいかないといけない。停滞するとダメ。
 
 イベントなどで集まる場所はトイレをきれいにする。
+
+イベントは「N人以上集まるなら行く」みたいな人もよくいる。最低人数を明確にすることで誘引しやすくなる。
