--- a/shared/discussion/meeting/根回し.md
+++ b/shared/discussion/meeting/根回し.md
@@ -1,1 +1,5 @@
 会議の前にある程度根回ししておかないと時間通りに結論が出ない。とくに無能が混ざっていると邪魔になるので、場合によっては締め出すことも検討する。
+
+根回しは実際に決める会議の前に相談しておくというだけ。人には考える時間が必要。組織的な判断の前に、個人レベルで話しておく。
+
+会議の目的は決めることであって、話し合うことではない。話し合いは先に済ませておく。それが根回し。
