--- a/shared/entertainment/接待.md
+++ b/shared/entertainment/接待.md
@@ -143,3 +143,15 @@ entertainment は不特定多数を楽しませるもので、その場で一人
 接待でも下手に出る必要はない。重要なのは相手を楽しませること。まぁ、人によっては持ち上げられるのが好きって人もいるけど。
 
 でかくて怖い人は接客業で一定の需要がある。用心棒がいてこそ、接客に集中できる。
+
+接客の基本:
+
+- 笑顔
+- 高い声、明るい声
+- アイコンタクト
+- オーバーリアクション
+
+笑顔は相手も笑顔になるならゴール。
+相手が笑顔になってないなら失敗。
+
+https://youtu.be/KQqu7UhzEng?si=BRjUW1WkUdxErGA9
