--- a/shared/singing/tips/音程を合わせる.md
+++ b/shared/singing/tips/音程を合わせる.md
@@ -55,3 +55,6 @@ https://youtu.be/lzP0toBya5c?si=XdfEx5wVmIzcppsR
 音程が細かく上下するフレーズは声帯よりも呼吸の強弱で結果的に音程がつく感覚。アイドルの「無敵の笑顔でかわすメディア」のとことか。
 
 音程が細かく上下に跳ねるところはしゃくりながらスタッカート。
+
+歌の練習として、ドレミで音を出せるようにチューナーを使ってチューニングしないといけない。しばらく練習して声の出し方が変わってくるとチューニングもずれやすいし、その日の調子によっても少し変わる。
+ぴったり合わせて安定させることで、1Hz単位で上下させる練習にもなる。
