--- a/shared/trust/期待.md
+++ b/shared/trust/期待.md
@@ -50,3 +50,6 @@
 「これが正しい」と思っていても、それをどのくらい他人に期待するかは人によって違う。
 
 「いいか、それは自惚れってエんだ。お客の期待を信じてねえんだからな。お客様が一人でも期待を寄せてくださってんなら、それを頭ごなしに否定しなさんな。」『昭和元禄落語心中』
+
+UIに不満を感じたら、何かが「期待通りに動いていない」と考える。
+では、何が期待通りに動いていないか。
