--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -186,3 +186,5 @@ https://youtube.com/watch?v=XWGCrPW6e-M&si=zPTuAuo2jKXU7pQ7
 ウタカタララバイは単調になりがちなので、声色で抑揚をつけるのが大事。
 
 舌の位置は声色に結構影響する。
+
+口の中の空間を小さくすると子どもっぽい声になる。
