--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -61,3 +61,7 @@
 
 男性の地声はオペラ歌手でもA4からC5くらいが限界で、一般人ならそのあたりから裏声で出すしかないと思った方がいい。なんならポップスのプロでも中音域から裏声の人も多い。
 ただ、練習では高音を伸ばすために地声で出す練習を続ける。
+
+高い音で声が硬くなるよりは、息を漏らすか、息を強くした方がいい。ただ、練習では声帯を伸ばすのが優先。
+
+声帯の伸びが悪いと高い声を出す時に硬くなりやすい。
