--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -17,6 +17,8 @@
 
 中サンダーは派生するとSAが当たらないので、弱サンダーにできるところは弱サンダーにする。普通の起き攻めも弱の方が強い。弱はガードされると確反があるので入れ込みなら中。立ち小足からは中しか繋がらない。
 
+中央ではセイスモからSA1の後が弱い。
+
 ## ジャンプキャンセルのコツ
 
 ジャンプキャンセルはタイミングが大事。
@@ -28,6 +30,11 @@
 
 シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
 2HP(pc)から伸ばしてもいいし、単に2HPコンボでもいい。
+
+密着からバクステの場合、+1から2MK(pc), 2HPが入る。
+2MP(pc)もド密着なら入るけど、弱/中サンダー後の少しだけ離れた密着でも届かない。
+
+中空バニも選択肢の一つ。密着ならめくりにもなるし。左右入れ替えたくないなら垂直から。
 
 ## LP
 
@@ -61,6 +68,12 @@
 - 2MP, ODセイスモ, JC 強バニ, ...: ダメージは2HP, 弱セイスモと同じ
 - 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中/強サンダー
 - 2MP, CR 2HP, 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
+
+## 2MP(c): 7 (25)
+
+- 2MP(c), 弱セイスモ, JC 強空バニ, 強サンダーPP: 3070
+- 2MP(c), 弱セイスモ, JC 強空バニ, SA3(70%): 4940
+- 2MP(c), 弱セイスモ, ODバニ, SA3: 4620
 
 ## 2MP(pc)
 
