--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -2,36 +2,72 @@
 
 端の前投げが最強。一つの中間目標にするといい。
 
-## 2HP
+## 2HP, 強サンダーC
 
-- 強サンダーC: ヒットで+6、ガードされて-1で投げ間合いの外
-- 弱バニ: しゃがみ暴れを潰す、派生するとガードされても+2
-- セイスモ: 7Fまで割り込める、ガードされて-10
-  - JC 強サンダーC: ガードされて-2、ヒット時はセイスモが普通に当たったのと同じコンボ
-- セビ: コパンでもL2になる
-- JC 強空バニ: めくり、ガードされて-2
-- JC 中空バニ: 表、ガードされても五分
+- {ヒット}: +6
+- {ガード}: 投げ間合いの外で-1
+  - JC 中空バニ: 密着ならめくり、発生の遅いしゃがみ攻撃を避けて当たる、ガードされて五分
 
-## バニKK
+## 2HP, セイスモ
 
-- 前投げ
-- バクステ, {通常投げ}, 2MP/2HP
+- {ヒット}: 空中で追撃可能
+- {ガード}: 中足の間合いで-10
+  - JC ODセイスモ: 無敵技以外で割り込めない
+  - JC 中空バニ: しゃがみ攻撃を避けて当たる、インパクトを避ける、ガードされて五分
+  - JC OD空バニ: しゃがみ攻撃を避けて当たる、インパクトを避ける、ガードされて+4
+- {DI}: 2HPを見てからセイスモに合わせた場合
+  - 垂直HJ: インパクトを避けて+10、しゃがみ攻撃も潰す、無敵技も届かないことがある、1ゲージ消費
 
-## HJ 強空バニ
+7F技まで割り込める。
+2HPにインパクトを合わされると確定。
 
-ガードされても五分。
+## 2HP, セビ溜め
+
+コパンでもL2になる。
+インパクトも受けられる。
+
+## 2HP, JC 空バニ
+
+- 2HP, JC 中空バニ: 表、ガードされて五分
+- 2HP, JC 強空バニ: 裏、ガードされて-2
+
+## ジャンプ攻撃
+
+- J.MK: 表になりやすい、早出しで表に落ちやすい
+  - 2MP: ヒット確認してLK
+- J.HK: 裏になりやすい
+  - 2HP, ...
+
+めくりになる距離でJ.MK早出しすると表に落ちて見えない。
+
+ハイジャンプから狙うのも強い。
+通常の対空とは距離とタイミングが違うので対応に困る。
+
+## バニ
+
+- {ガード}: 投げ間合いで-2、先端なら遠い
+  - KK派生
+    - {ガード}: +2
+      - バクステ: シミー
+
+## 中空バニ
+
+- {ガード}: 投げ間合いで-2、先端なら投げ間合いの外、なんなら+4まで有利になる場合がある
+
+地上のバニより発生が遅いので対空されやすい。
 
 ## HJ OD空バニ
+
+- {ガード}: +4で後退がシミーになる投げ間合い
+  - 2MP
+  - 前投げ
+  - 後退: シミー
 
 ガードされても+4で後退がシミーになる投げ間合い。
 しかも初期位置の距離からでもちゃんとめり込む。
 
 3ゲージ使うので運用は計画的に。
-
-- {ガード}
-  - 2MP
-  - 前投げ
-  - 後退: シミー
+特にSA1の後は2ゲージで使えるので強い。
 
 ## セイスモ
 
