--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -55,6 +55,17 @@
   - 弱バニ(+4): 距離で持続当てになる、一部の4-8F技と相打ちになって不利、ガードで中足の間合い
   - 弱サンダー(+3): ヒットで4、ガードされて-1で投げ間合いの外
 
+## 弱/中サンダー: 1
+
+- LP/2LP, 2LP: 暴れ潰し、カウンター確認で2MPに行けると最高
+- 中バニ: 投げ潰し、一部のしゃがみ攻撃を避ける
+- 垂直中空バニ: 投げとインパクトに当たる、一部のしゃがみ攻撃を避ける、ガードされても五分で後退がシミーになる
+
+バクステシミーはド密着よりほんの少し遠くて2MPが届かない。2MK(pc), 弱セイスモくらい。
+めくりも狙えるバニの方がいい。
+
+カウンターでも後退できないので同じ。打撃は2MPにしてもいい。
+
 ## 弱サンダーPP: 37
 
 - ステップ
@@ -175,10 +186,18 @@
   - 2MP
   - 前投げ
 
-## SA1: 24
+## SA1: 21
 
+## セイスモ, SA1: 23
+
+## セイスモバニ, SA1: 24
+
+- 前HJ OD空バニ: ガードで+8
+  - 2HP, 強サンダーC: 2MPの射程
 - ステップ: +3
-- DI: 無敵技以外で割り込めない
+  - {その場受け身}: 後退がシミーになる投げ間合い
+- {端}
+  - DI: 無敵技以外で割り込めない
 
 ## SA2: 19
 
@@ -186,5 +205,24 @@
 
 ## SA3: 21
 
-- 前HJ.HK: 最速無敵技が裏に出て当たらない
-- DI: ジャンプできない
+- 強セイスモ: 無敵技以外で割り込めない
+- セイスモフェイント: -6
+- DR HP, 強サンダーC
+  - {ガード}: 後退がシミーになる投げ間合いで+3
+- DR 2HP
+  - 強サンダーC: ガードされても投げ間合いの外で+3
+- 前HJ.HK: 最速無敵技が裏に出て当たらない、端でも裏
+- {端}
+  - DI: 投げやジャンプで割り込めない
+
+## CA: 23
+
+- 強セイスモ: 無敵技以外で割り込めない
+- DR HP
+  - JC 強サンダーC: ガードされても+4
+  - JC 中セイスモ: ガードされても中足の外で-10
+- DR ガード: 中パンの間合いで-3
+- DR 強セイスモ: 無敵技を避ける
+
+SA3より遠くてハイジャンプしてもめくれない。端でも同じ。
+相手のジャンプも届かないのでセイスモはキャミィやJPのSA3でもない限り安全。
