--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -23,8 +23,16 @@
 
 ## 2HP, セビ溜め
 
-コパンでもL2になる。
-インパクトも受けられる。
+- 2HP
+  - {ヒット}
+    - 解放L1: +24
+  - {ガード}
+    - 溜め: コパンでもL2になる、インパクトも受けられる
+      - {何もしない}, ステップ
+
+ヒットした場合は即解放する。
+
+溜めキャンセルが早すぎると受けられないので画面をよく見る。
 
 ## 2HP, JC 空バニ
 
