--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -19,22 +19,15 @@
 
 中央ではセイスモからSA1の後が弱い。
 
+モダンでLKに繋ぐ場合、+1以下だとLP, 2LP, LKと行かないといけなくて2LPが届かない場合がある。
+LP 2回から直接強サンダーに繋ぐのが無難。
+
 ## ジャンプキャンセルのコツ
 
 ジャンプキャンセルはタイミングが大事。
 先行入力ではなく、しっかりキャンセルできるタイミングでコマンドを入れる。
 
 モダンの場合、SPボタンの空バニの入力が早すぎてセビになることがあるので、セビになっても漏れないようにSPボタンを長めに押すか、空バニも2SPで出すといい。
-
-## シミー
-
-シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
-2HP(pc)から伸ばしてもいいし、単に2HPコンボでもいい。
-
-密着からバクステの場合、+1から2MK(pc), 2HPが入る。
-2MP(pc)もド密着なら入るけど、弱/中サンダー後の少しだけ離れた密着でも届かない。
-
-中空バニも選択肢の一つ。密着ならめくりにもなるし。左右入れ替えたくないなら垂直から。
 
 ## LP
 
@@ -97,6 +90,8 @@
 - 2HP, 弱セイスモ, JC 強バニ, SA3(70%): 5020 (AC3)
 - 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5270
 
+中サンダー締めは最低空でないと繋がらない。モダンならAC3があるので安定。
+
 ## 2HP, 強サンダーC: 6
 
 - 2HP, 強サンダーC, 2MP, 弱サンダーPP: 2540
@@ -127,6 +122,7 @@
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA2(60%): 4750
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2: 5050
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, SA3(60%): 5350
+- 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, 中サンダーPP, SA3: 5790
 - 2HP(pc), 強サンダーC, 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA3: 5850
 
 ## 2MK: 5
