--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの立ち回り.md
@@ -31,3 +31,9 @@ J.HKは空バニでキャンセルできる。
 ## 反撃
 
 ヴァイパーは技が短すぎるので、とっさの反撃は大足にするべき。大パンとか中パンとか空振りがち。
+
+2HP, セイスモにはジャンプが最大。
+ただし、ODセイスモにされるとジャンプできないので注意。HJバニとかもある。
+近距離ならガードから確反もある。まぁHJバニに負けるんだけど。
+
+後方受け身をしないことで、後退がシミーにならない場面がある。たまに受け身を取らないのも対策の一つ。
