--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの練習メニュー.md
@@ -1,17 +1,32 @@
-## セイスモからハイジャンプコンボ
+## セイスモコンボ
 
-- 弱/中セイスモ, JC 強空バニ, ODバニ, SA2/3
+- 2HP, 弱セイスモ, JC 強空バニ, 中サンダーPP
+  - ステップ, 前進
+    - 2HP, ...
+    - 前投げ
+    - 後退
+- 2HP, 弱セイスモ, JC 強空バニ, SA
 
-コンボでも中距離の差し合いでも使う。
+モダンならAC3で簡単。
 
-クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。先行入力しない。
-モダンの場合は29SPの中空バニで妥協してもいい。強より短いので距離は限定される。
+バニを最低空で出さないと中サンダーで拾えない。クラシックは強サンダーで妥協してもいい。
+強サンダーの場合は前進しなくても密着するので前投げだけ少し遅らせる。
 
-## 強攻撃から中攻撃に繋ぐコンボ
+## サンキャンコンボ
+
+（起き上がり: ランダム）
+（反撃設定 > ダウンリバーサル: 何もしない）
+（反撃設定 > ダウンリバーサル: 通常投げ 4Fディレイ）
 
 - 2HP, 強サンダーC
   - {ヒット}
-    - 2MP, 弱サンダーPP, ...
+    - 2MP, 弱サンダーPP
+      - ステップ
+        - 前進
+          - 2HP, 強サンダーC, ...
+          - 前投げ
+        - 後退
+          - {通常投げ}, 2HP(pc), ...
   - {ガード}
     - ガード
 
@@ -24,39 +39,44 @@
 
 - {空} 強サンダーPP
   - 前進
-    - 2HP, ...
+    - 2HP, 強サンダーC, ...
     - 前投げ
       - {ジャンプ}, 強サンダーPP, ...
 
-## セイスモコンボ
-
-- 2HP, 弱セイスモ, JC 強バニ, 強サンダーPP
-  - ステップ
-    - 2HP, ...
-    - 前進, 前投げ
-    - 後退
-- 2HP, 弱セイスモ, JC 強バニ, SA
-- 2HP, 弱セイスモ, JC 強バニ, ODバニ, SA2/3
-
-モダンならAC3で簡単。
-モダンなら中サンダーPPの方がいい。起き攻めは前進が伸びるけど同じ。
-
 ## 柔道
 
-（ダウンリバーサル: 通常投げ 3Fディレイ）
+（ダウンリバーサル: 何もしない）
+（ダウンリバーサル: 通常投げ 4Fディレイ）
 
 - {端} 前投げ
   - 前進
-    - 2HP, ...
+    - 2HP, 強サンダーC, ...
     - 前投げ
     - ガード: 投げられない距離で止まる
+      - {通常投げ}, 2HP, ...
+  - 中バニ(+4)
+    - {ヒット}
+      - 前J.HP: 詐欺飛び
+    - {ガード}
+      - 前投げ
+      - 後退
+        - {通常投げ}, 2HP, ...
 
 ## 2HPに繋ぐ
 
+- 2MP, DR 2HP, 強サンダーC, 2HP, ...
 - DR 2MK, 2HP, ...
 - DI(pc), 2HP, ...
 - DI(壁), 2HP, ...
 - {Dリバ}, 2MP(pc), 2HP, ...
+
+## 遠めの強攻撃から弱サンダーに繋ぐコンボ
+
+- 2HP, 強サンダーC
+  - {カウンターヒット}, 2MK, JC 弱サンダーPP
+  - {ガード}, ガード
+
+<!----------------------------------------------------------------------------->
 
 ## 小技から強サンダーに繋ぐ
 
@@ -76,16 +96,9 @@
 
 持続当てになるのでシミーを狙える。
 
-## 弱サンダーで締めるコンボ
+## ラッシュから弱サンダーに繋ぐコンボ
 
-- 2MP, 弱サンダーPP
-  - SA3
-  - ステップ
-    - 前進, 前投げ
-
-## ラッシュ中段から弱サンダーに繋ぐ
-
-- DR 6MP, 2MP, 弱サンダーPP, ...
+- DR 2LK/6MP, 2MP, 弱サンダーPP, ...
 
 ## ラッシュ下段からのコンボ
 
@@ -99,6 +112,15 @@
       - LP/2LP, 2LP, ...
   - {ガード}
     - LP/2LP, 2LP
+
+## セイスモからハイジャンプコンボ
+
+- 弱/中セイスモ, JC 強空バニ, ODバニ, SA2/3
+
+コンボでも中距離の差し合いでも使う。
+
+クラシックならセイスモが当たる瞬間に2369Kを素早く入力する。先行入力しない。
+モダンの場合は29SPの中空バニで妥協してもいい。強より短いので距離は限定される。
 
 ## 端の前投げから中バニ
 
@@ -122,3 +144,26 @@
 
 ゲージ無限にするともっといける。
 端でも謎の力で押し返されるので規定回数まで。
+
+## セビの読み合い
+
+- 2HP, セビ溜め
+  - {ヒット}
+    - ステップ
+      - 前投げ
+      - 2LK, 2LP, ...
+  - {ガード}
+    - {中足}
+      - セビL2(自動), 2MP, 中サンダーPP, ...
+    - {何もしない}
+      - ステップ
+        - LP/2LP, 2LP, ...
+        - 前投げ
+
+## 弱攻撃から強サンダーに繋ぐコンボ
+
+- LP 2回
+  - {ヒット}
+    - 強サンダーPP, ...
+  - {ガード}
+    - ガード
