--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -2,6 +2,16 @@
 
 +5以上あるなら2HP, 強サンダーCが基本。ガードされても-1で投げ間合いの外。
 
+## シミー
+
+シミーは2HPが基本。2MP(pc)だと2HPに繋ぐのがギリギリの距離。
+2HP(pc)から伸ばしてもいいし、単に2HPコンボでもいい。
+
+密着からバクステの場合、+1から2MK(pc), 2HPが入る。
+2MP(pc)もド密着なら入るけど、弱/中サンダー後の少しだけ離れた密着でも届かない。
+
+中空バニも選択肢の一つ。密着ならめくりにもなるし。左右入れ替えたくないなら垂直から。
+
 ## 技を当ててジャンキャンバニ
 
 - HP, 上JC 中バニ: 表
@@ -22,7 +32,7 @@
 
 - 強セイスモ: 昇竜暴れが届かない、SAは技によって届くこともある、-5で大足の外
   - フェイント: +1
-- {端}
+- {端}: ド密着
   - 前進
     - 前投げ
     - ガード: シミー
@@ -30,10 +40,14 @@
     - {ガード}
       - 前投げ
       - 後退: シミー
-  - ステップ: 7
+  - ステップ: ド密着で+7
     - MP
     - 2MP(+2): カウンターで2HPが繋がる
     - 2MK
+    - 垂直HJ中空バニ: シミー、しゃがみ攻撃も避けて当たる
+      - {ガード}: 後退がシミーになる投げ間合いで+1
+      - {DI}: 避けて+22
+      - {Dリバ}: 避けて裏から当たる
   - 中バニ, 2MP
 
 ## 前投げ(pc)
@@ -46,13 +60,25 @@
   - {ガード}: 五分
     - 後退: シミー
 
-## 後投げ
+## 後投げ: 19
 
 - {端}
-  - DR HP: 4F遅れ、相打ち狙い
-  - DR 2MK(+1): ヒットで2HP、ガードで+4
+  - DR HP: 4F遅れ
+    - {相打ち}, 2HP, ...
+    - {ガード}: +1
+    - JC 強サンダーC: 1ゲージ消費
+      - {ヒット}, 2HP, ...
+      - {ガード}: 後退がシミーになる投げ間合いで+4
+  - DR 2MK(+1)
+    - {ガード}: +4
+      - 2MK: 4F遅れ
+        - {相打ち}: 2HP, ...
+        - JC 弱セイスモ
+    - JC 弱セイスモ
+    - JC 中空バニ
   - DR(+8F以上) 前投げ: 最速で5F遅れ
-  - 弱バニ(+4): 距離で持続当てになる、一部の4-8F技と相打ちになって不利、ガードで中足の間合い
+  - 弱バニ(+4): 距離で持続当てになる、一部の4-8F技と相打ちになって不利
+    - {ガード}: 中足の間合いで+2
   - 弱サンダー(+3): ヒットで4、ガードされて-1で投げ間合いの外
 
 ## 弱/中サンダー: 1
@@ -96,7 +122,7 @@
 
 - ステップ: +4、ゼロ距離、後退しても投げられる
 
-## 強サンダー(+1)-PP: 26
+## LP/2LP/2LK 2回, 2LP, LK, 強サンダー(+1)-PP: 26
 
 - ステップ
   - 2MK, LK, 強サンダー(+1)-PP: 同じ状況でループする
@@ -114,11 +140,7 @@
 持続なしの場合よりも少し遠くて、ゼロ距離にならない。
 ステップから後退がシミーになる。
 
-主なルート:
-
-- LP/2LP, 2LP 2回, LK, 強サンダー
-- 2LK, 2LP, LK, 強サンダー
-- セイスモ, 強サンダー
+26Fでも後退がシミーになる状況の方が少ない。
 
 ## {空} 強サンダーPP
 
@@ -164,21 +186,34 @@
 - ステップ
   - HJ OD空バニ: 後方受け身に裏
 
-## セイスモ, JC 強バニ: 56
+## セイスモ, JC 強空バニ: 56
 
 - 強バニ: 裏に回って+5、ゼロ距離
 
-## セイスモ, JC 強バニ, 強サンダーPP: 28
+## セイスモ, JC 強空バニ, 強サンダーPP: 28
 
+- ステップ: +7
+  - 2HP, 強サンダーC
+  - 前進(2F以上), 前投げ
+  - {中央}
+    - 後退: 後方受け身にシミー
+  - {端}: 前投げと同じ
 - DR 弱セイスモ
 
 中バニ(+4)が重なるフレームだけど、中央ではガードされたあと投げに行けないので微妙。やるなら派生。
 
-## セイスモ, JC 強バニ, 中サンダーPP: 30
+## セイスモ, JC 強空バニ, 中サンダーPP: 30
 
 - DR 6MP
 - 強バニ(+4): ガードされて+2の密着、ヒットして+42
-- ステップ, 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
+- ステップ: +9
+  - 2MK(+2): ヒットしたら中央でも2MPが入る、カウンターなら2HPでもいい
+    - 前HJ中空バニ: めくり
+    - {ヒット}: 2MP
+    - {ガード}: 投げ間合いの外で+1
+- {中央}
+  - 中セイスモ
+    - {DI}: 返せる
 
 ## セビ: 24
 
