--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -64,6 +64,19 @@
 
 地上のバニより発生が遅いので対空されやすい。
 
+## 垂直HJ 中空バニ
+
+- {インパクト}: 裏に抜けて+22
+- {リバ}: 裏に抜けて当たる
+- {ガード}: 投げ間合いで+1
+  - 後退: シミー
+
+ド密着でないと投げ間合いにならない。
+中央では後退で投げ間合いを外せるので、主に端で狙う。中央ではめくりの方が強い。
+
+前投げの後は垂直HJ中空バニが強いのでステップでもいい。
+インパクト、Dリバを避けて、ガードで後退がシミーになる1。
+
 ## HJ OD空バニ
 
 - {ガード}: +4で後退がシミーになる投げ間合い
