--- a/shared/communication/frameworks/coaching/コーチング.md
+++ b/shared/communication/frameworks/coaching/コーチング.md
@@ -84,3 +84,8 @@ management 的に成功させるというよりは、achievement 的に目標を
 
 成功に導くのがコーチング。
 文化を伝える教師や技術を伝えるメンターとは文脈が違うものの、方法としては近いところにある。
+
+マネジメントにはコーチングが必要。
+優れたメンバーでなくても、自分が育ててリソースにする。
+
+「え？もしかしてあんなにでかい口叩いておきながら結局お前上手い人に囲まれてじゃないと何もできないの？」『悪いが私は百合じゃない』
