--- a/shared/family/marriage/浮気.md
+++ b/shared/family/marriage/浮気.md
@@ -8,3 +8,5 @@
 
 浮気するような人が好きなのに「浮気されたくない」って言うのは自分だけを特別扱いしてほしいから。
 ただ、残念ながら浮気する人は一人を好きになっても当然浮気する。誰か一人を特別扱いしないからこそ浮気するのだし。
+
+「そりゃ乳出されたら一応触るだろ礼儀として」『悪いが私は百合じゃない』
