--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの特徴.md
@@ -51,6 +51,12 @@
 - 強バニ
 - HJ OD空バニ
 
+## モダン
+
+ヴァイパーはモダンでもかなり強い。
+
+MPは2HPでもいいし、HKがなくても火力が落ちるだけで立ち回りはそう変わらない。対空というか起き攻めのジャンプ潰しがないのはちょっと不便だけど、なんとかなる。2LPも短すぎて使いづらいし。
+
 ## その他
 
 J.HKやバーニングキックでもめくれるのが強み。
