--- a/games/Street-Fighter/Six/tips/守りの練習メニュー.md
+++ b/games/Street-Fighter/Six/tips/守りの練習メニュー.md
@@ -112,3 +112,7 @@ https://youtu.be/pRL-TWPgoSA?si=J9X8tH1P6iKqgnws
 連続ガードの場合は漏れないようにする。
 
 DR 小パンを混ぜて通常技で止める練習を混ぜてもいい。
+
+## その他
+
+守りの練習は、まず中下段のガード、最速で無敵技、最速でDリバ、最速でバックジャンプ、有利になる技と不利になる技をガードして有利になった時だけコパン暴れ、2Fくらい遅らせてコパン、4Fくらい遅らせて投げ、最速でジャスパ狙い、あたり。いろんな技から起き攻めをレコードしてできるようにする。
