--- a/shared/health/衛生.md
+++ b/shared/health/衛生.md
@@ -2,3 +2,5 @@
 他にも公共の場に出た時は、できるだけものに触らないとか、帰ったら手を洗うとか、どこかに触ったら自分の体に触らないとか、注意しておかないと感染しやすい。
 
 風呂に入ったらわざわざ水ごりする意味はない。
+
+財布やスマホなど日常的に持ち歩くものは病原体が付着しやすいので、こまめにアルコールティッシュなどで除菌するといい。
