--- a/shared/human/being/人生.md
+++ b/shared/human/being/人生.md
@@ -48,3 +48,5 @@ https://x.com/cicada3301_kig/status/1914565545967428076?s=46
 借金が返せなくて自己破産するクズもいるのだし、気楽に生きていい。
 
 「自己満足。大いに結構じゃないですか。俺はそいつが実は人生ってヤツではないかと思ってます。」『うみねこのなく頃に』
+
+「ボクの人生ですよ！？」（宝鐘マリン）
