--- a/shared/health/exercise/運動療法.md
+++ b/shared/health/exercise/運動療法.md
@@ -1,3 +1,44 @@
+# Exercise
+
+運動療法。
+
+特に健康のための運動を exercise という。
+
+痩せたり体力をつけたりする健康のための運動はエクササイズ。
+エクササイズを超えて、健康を害するような運動は避けるべきなので、beauty の下でなくてもいいと思う。
+
+全身運動
+
+https://x.com/takeru__jp/status/1816987192163729670
+
+肩こり
+
+https://x.com/tr_sage_okumura/status/1806100854371672290
+
+腹回り
+
+https://x.com/mei_iem__/status/1815750779874984373
+https://x.com/YuyaDiet40/status/1804460708425564452
+
+その他
+
+https://x.com/yutta_fit/status/1817305913692410364
+https://x.com/tachu_muscle/status/1816941561764282399
+https://x.com/YuyaDiet40/status/1814969924487614657
+
+体を壊すと元も子もないので、寒い日は温かくして、終わったら汗を拭く。
+
+週に5時間歩いた場合、体脂肪率はどれくらい落ちるんだろう？目標にするには見積もりができない。
+
+運動の目標としては、5キロ体重を落とす、前屈で床に手がつくようになる、10キロ走れるようになる、幅跳び2m、月に100km歩く、などが考えられる。
+
+エクササイズの方向性を大きく分けると、筋肉をつけるか、脂肪を落とすか。
+筋肉にも瞬発的な筋力と持続的な筋力（体力）がある。
+
+歩いてばかりじゃなくて、個別に筋トレもした方がいい。特に腕や胸。
+
+四股は筋トレとしても使える。
+
 [BORN TO RUN | クリストファー・マクドゥーガル](https://www.amazon.co.jp/dp/4140814144)
 
 体が硬いと滑らかに動かせない。滑らかに動かせないとスポーツでも対処できない状況が生まれやすくなる。
