--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -366,3 +366,10 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
   - 疲労
   - 重量
   - 仕事量
+
+たまたまできる、才能がある人以外は、意図的に訓練してできるようにしないといけない。
+
+凡才というのは、天才でもないのに正しく訓練していない人のこと。
+
+数百年、数千年続く伝統的な訓練方法の多くは科学的でもある。再現性がある。
+ただ、数十年くらいだと足りない。
