--- a/shared/singing/ボーカルトレーニング.md
+++ b/shared/singing/ボーカルトレーニング.md
@@ -168,3 +168,11 @@ https://youtu.be/L1SH1cRTOuM?si=bL92URDh81zOJCyM
 歌い方が良くなっても、鍛え方が足りないと不安定になりやすい。
 
 声楽の曲の部分 (music/vocal) と、歌の部分 (singing) を分けてもいいかも。
+
+オペラの歌い方というか、練習方法はポップスでも基礎になる。
+
+- 息の支え（強くて細い息）
+- 横隔膜と腹筋による自然なビブラート
+- 声帯を伸縮させた高くても柔らかい声
+- 声帯を下げた喉の奥によく響く声
+- 声帯に力を入れずに息の強さで閉じる
