--- a/shared/human/being/well/愛情.md
+++ b/shared/human/being/well/愛情.md
@@ -26,3 +26,6 @@ https://gigazine.net/news/20230711-lonely-peoples-brains-work-differently/
 宗教や家族は個人の命を繋ぎ止める意味もある。繋がりが弱いと死のうと思ったときに摩擦が少ない。
 
 風情も風景に対する愛情。自分たちの外にあるものに愛情を向ける。
+
+過干渉は、情があっても愛がない。
+恩知らずは、愛があっても情がない。
