--- a/shared/achievement/優先順位.md
+++ b/shared/achievement/優先順位.md
@@ -34,3 +34,5 @@ https://note.com/kenwagatsuma/n/naac8f4fa088c
 何かを目指すなら、優先順位をつけないといけない。一時的に何かのパラメータが悪くなっても優先すべきパラメータが伸びているならそのまま進まないといけない。
 
 「重要でないが、緊急」というのは、締切は定められてるけど、その根拠がないタスク。上司が無能だとよくある。規則上は緊急なんだけど、別にやらなくても何もない。自分の判断で無視して締め切りを過ぎてもいい。
+
+何をやろうとしても後回しする、というのはありえない。後回しにされた何かの代わりにやっていることがあるはずだ。
