--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -322,3 +322,7 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 
 自然に反する自由が基礎。
 芸術は自然と対立する。
+
+芸術は仕事の延長。何らかの力を制御する技術が基礎になる。
+
+技術がないと、芸術も疎かになりやすい。
