--- a/shared/dance/ダンス.md
+++ b/shared/dance/ダンス.md
@@ -9,3 +9,5 @@
 ダンスは鳴っている音を全て捉えるのが基本。まずバスドラム（キック）、次にスネア、ハイハット、最後にメロディーやボーカルなどの上物。
 
 ダンスでもパフォーマンスの時間が決まっていると曲を編集して時間内に収める必要がある。
+
+女性向けのダンスはくびれがないとシルエットとして締まらないダンスも多い。
