--- a/shared/health/exercise/運動療法.md
+++ b/shared/health/exercise/運動療法.md
@@ -57,7 +57,7 @@ https://x.com/YuyaDiet40/status/1814969924487614657
 
 筋肉痛になるならプロテインを摂るといい。
 
-健康のための運動が fitness.
+健康のための運動が fitness や exercise。
 
 2 時間くらいゆったり歩き回ると 5000 歩くらい。
 
@@ -74,3 +74,10 @@ https://x.com/YuyaDiet40/status/1814969924487614657
 https://x.com/andre_shinayaka/status/1837047754264322556
 
 エクササイズは運動というより健康のための運動、運動療法というべきかも。
+
+- 散歩する、できれば日光を浴びる
+- スクワットする
+- スポーツドリンクはスポーツする人のための飲み物
+- 栄養ドリンクを飲んでも疲れは取れない
+
+スクワットは相当追い込まないと関節を痛めない。
