--- a/shared/thinking/問い.md
+++ b/shared/thinking/問い.md
@@ -106,3 +106,15 @@
 何を基準に考えるか。
 
 問いによって「自分は何がわかってないか」を知ることができる。
+
+- 経緯: どうして、なぜ
+- 予測: どうなる
+- 結果: どうなった
+- 分量: どのくらい、いくら、いくつ
+- 位置: どこ
+- 時間: いつ
+- 起源: いつから
+- 期間: いつまで
+- 概念: なに
+- 人物: だれ
+- 比較: どれ
