--- a/shared/achievement/problem/solving/patterns/分割統治.md
+++ b/shared/achievement/problem/solving/patterns/分割統治.md
@@ -20,3 +20,9 @@
 曖昧な問いは明確な問いに、複雑な問いは複数の単純な問いに置き換えてみる。
 
 同じ問題を解決する小さな課題に置き換えて検証するとコストを抑えて試行回数を増やせる。
+
+- 同時にやらない、一つずつ完了させる
+- 小さくする、30分で完了させる
+- 全部できるようになるまで待たない、できることから完了させる
+
+https://x.com/onebookofmag/status/1984003626956673351?s=12
