--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -60,3 +60,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 ハモリはコードに合わせるのが大事。声だけじゃなくて伴奏ともハモる。
 
 声質が近い方がハモリは綺麗。
+
+ハモリはとにかく原曲を正確に覚えて歌えるところから。目立ちすぎないように声やビブラートは抑える。
