--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -120,3 +120,11 @@
 まずは原キーで覚えて、高音や低音が出なかったらオクターブで上げ下げする。原曲とテンションが違っても後回し。
 
 うろ覚えの曲は聴きながら歌う回数が足りない。まずはちゃんとリズムやメロディを覚える。声色とかの細かい表現は後回しでもいい。
+
+- 歌詞
+- 歌詞のパート分け
+- パートごとのメロディ
+
+ソロの場合はメロディやパートが一つで済む。
+
+まずは原曲を何度も聴くのが基本。
