--- a/shared/engagement/tips/報酬.md
+++ b/shared/engagement/tips/報酬.md
@@ -57,3 +57,11 @@ ADHDは報酬系が機能しない。
 仕事の報酬は少なくてもいいので必ずもらう。
 今後、同じことを誰かから頼まれた時に報酬を自分で決められるようにする。
 やりたくなかったら、報酬を不当に高く設定すればいい。断るのではなく、相手に断らせる。
+
+外的報酬と内的報酬がある。
+外的報酬の方が強くて、外的報酬を与えられすぎると内的報酬が抑えられてしまう。
+
+報奨は、行動を促す。
+
+組織が推奨する行動に報奨を与える。
+思ったのと違った方向に進んでしまう場合は廃止しなければならない。
