--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの対策.md
@@ -13,3 +13,7 @@
 ## その他
 
 ヴァイパーは後退がシミーになる場面があまりない。できれば覚えたい。最速投げ暴れは択の一つ。
+
+2HPをガードしたらガードとバックジャンプが無難。
+ガードし続けると2HPを連続で当てられてドライブゲージを削られがち。
+バックジャンプを咎めるには、地上バニが無難だけど、1600しか入らない。ただ、ODサンダーで一点読みならSAが入る。
