--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -6,6 +6,7 @@
 
 - {ヒット}: +6
 - {ガード}: 投げ間合いの外で-1
+  - {遠} 2HP: ガード読み、遠目なら弱攻撃も差し返せる
   - JC 中空バニ: 密着ならめくり、発生の遅いしゃがみ攻撃を避けて当たる、ガードされて五分
 
 ## 2HP, セイスモ
@@ -34,10 +35,19 @@
 
 溜めキャンセルが早すぎると受けられないので画面をよく見る。
 
+## 2HP, 弱バニ
+
+しゃがみ攻撃やジャンプに勝てる。
+
+ガードされても-2。
+遠目なら投げも届かない。近いと投げ間合い。
+
 ## 2HP, JC 空バニ
 
 - 2HP, JC 中空バニ: 表、ガードされて五分
 - 2HP, JC 強空バニ: 裏、ガードされて-2
+
+裏表を狙う。
 
 ## ジャンプ攻撃
 
