--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの攻め.md
@@ -2,11 +2,30 @@
 
 端の前投げが最強。一つの中間目標にするといい。
 
+## 2HP
+
+- 強サンダーC: ガードされて-1で無難
+- セイスモ: リターンが大きい
+- セビ溜め: 打撃暴れにピンポイント対策
+- 弱バニ: しゃがみ攻撃暴れとジャンプにピンポイント対策
+- 前JC 空バニ: めくり狙い
+- 垂直HJ: 中、強攻撃やインパクト暴れにフルコンボ
+
+サンキャンが無難で、リターンを狙うならセイスモ。
+ガードして暴れてくる相手にはセビ溜めや弱バニ。弱バニはジャンプにも引っかかる。
+
+セイスモは相手がジャンプすると避けられてフルコンボが入ってしまう。
+ジャンプを咎めるなら弱バニが無難。ただ、セイスモとバニの両方にインパクトが入る。まぁ、セイスモだけならハイジャンプで避けられるけど2HPから合わされると確定。
+
+バックジャンプを咎めるには、地上バニが無難だけど、1600しか入らない。ただ、ODサンダーで一点読みならSAが入る。
+
+差し合いの中で遠目の大パンサンキャンは連続でガードさせて、相手が手を出してくるタイミングを見計らってセビやセイスモを出しておくのが強い。
+
 ## 2HP, 強サンダーC
 
 - {ヒット}: +6
 - {ガード}: 投げ間合いの外で-1
-  - {遠} 2HP: ガード読み、遠目なら弱攻撃も差し返せる
+  - 2HP: ガード読み、弱攻撃暴れでは届かない距離が特に強い
   - JC 中空バニ: 密着ならめくり、発生の遅いしゃがみ攻撃を避けて当たる、ガードされて五分
 
 ## 2HP, セイスモ
