--- a/shared/communication/frameworks/coaching/コーチング.md
+++ b/shared/communication/frameworks/coaching/コーチング.md
@@ -89,3 +89,5 @@ management 的に成功させるというよりは、achievement 的に目標を
 優れたメンバーでなくても、自分が育ててリソースにする。
 
 「え？もしかしてあんなにでかい口叩いておきながら結局お前上手い人に囲まれてじゃないと何もできないの？」『悪いが私は百合じゃない』
+
+コーチングとして楽しませるのも大事だけど、最終的に自分で楽しみを見つけられない人はどうしようもない。
