--- a/shared/communication/真実.md
+++ b/shared/communication/真実.md
@@ -6,3 +6,6 @@
 真実は単に「信じられる」ことでしかないので、受け手が決めるものだ。自分から「真実はこうだ」と言う人は詐欺師か馬鹿だと思っていい。
 
 「愛がなければ真実は見えない」『うみねこのなく頃に』
+
+人は真実を求めていない。
+ほとんどの人はクズで、自分の快楽がすべてだ。
