--- a/shared/music/vocal/ハモリ.md
+++ b/shared/music/vocal/ハモリ.md
@@ -62,3 +62,5 @@ https://youtu.be/8SrbHcLcMzw?si=K2LsssElsbk9xrHK
 声質が近い方がハモリは綺麗。
 
 ハモリはとにかく原曲を正確に覚えて歌えるところから。目立ちすぎないように声やビブラートは抑える。
+
+ハモリは、上ハモ、下ハモ、ずらし、に分ける。メインメロディを上か下にずらしたものと、それ以外。ずらしはメインメロディと違うメロディで歌う。
