--- a/shared/success/risk/リスク.md
+++ b/shared/success/risk/リスク.md
@@ -182,3 +182,5 @@ VUCAとは逆を目指せばリスクを減らせる。
 リスクリターンだけが全てではない。
 
 「知らなかったほうが幸せ」というのは、幸せなまま死にたいのか、幸せでなくなっても生きたいのかによる。
+
+想像できる程度のことはあまり気にしなくていい。起きてから対処すればいい。むしろ想像できていないことを警戒する。
