--- a/shared/technique/技術.md
+++ b/shared/technique/技術.md
@@ -162,3 +162,5 @@ engineeringは理論的。
 
 アートやスポーツなどのタレント業に関わるには、パフォーマー、インストラクター、マネージャー、などの職業がある。
 パフォーマーには卓越性が必要だけど、それ以外は平凡でも価値がある場合はある。
+
+技術は伸びている時期が一番楽しくて、伸びなくなるとマンネリになりやすい。
