--- a/shared/game/優劣.md
+++ b/shared/game/優劣.md
@@ -12,3 +12,6 @@
 集団の中で優劣の差は必ず出てくる。
 
 「あいつらは劣っている」と考えて断絶するのではなく、優れているなら劣っている人に歩み寄るのがノブレスオブリージュ。
+
+何かが「できない」のはそれだけ「劣っている」ということ。
+ただ、「劣っている」としても総合的に「勝てる」場合がある。優劣と勝敗は別。
