--- a/shared/mood/場の空気を壊さない.md
+++ b/shared/mood/場の空気を壊さない.md
@@ -3,3 +3,6 @@
 
 不快さを示す場合でも、空気を壊さない。
 笑いに変える。ユーモアやウィットを使う。相手は不快に思っても、それ以外の人を不快にさせない。
+
+空気を壊さないのと空気を悪くするのはちょっと違う。
+ただ、空気を壊してことで不機嫌になる人がいると、空気を壊すことで空気が悪くなる。
