--- a/shared/music/vocal/デュエット.md
+++ b/shared/music/vocal/デュエット.md
@@ -1,1 +1,12 @@
 デュオは同性、デュエットは異性（高音と低音）の二重奏。
+
+デュエットの難しさ:
+
+- 歌詞だけでなく、パート分けも覚えないといけない
+- メインメロディと違う場合はメロディを新たに覚えないといけない
+- ハモリはカラオケにガイドメロディが入ってなかったりする
+- パートごとに歌える人を集めないといけない、練習もしにくい
+
+易しさ:
+
+- 自分のパートだけ覚えたら歌える
