--- a/shared/singing/tips/曲を覚える.md
+++ b/shared/singing/tips/曲を覚える.md
@@ -128,3 +128,6 @@
 ソロの場合はメロディやパートが一つで済む。
 
 まずは原曲を何度も聴くのが基本。
+
+歌詞やパート分けは歌詞カードを見ながら歌う手もある。まぁ、歌詞はできれば覚えた方がいい。繋ぎがスムーズになる。
+メロディは譜面を曲の速度で辿るのがそれはそれで慣れが必要。
