--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -67,3 +67,16 @@
 声帯の伸びが悪いと高い声を出す時に硬くなりやすい。
 
 力が入るとフラットしやすい。
+
+高くても柔らかい声を出すには、まずそれより低い中音域で柔らかくないと無理。
+
+高い声を出すには、
+
+1. 声帯を伸ばす
+2. 息を強くする（声を張る）
+3. 息漏れ声（裏声）にする
+4. 声を硬くする
+
+のいずれか。
+基本として声帯を伸ばして柔らかくて高い地声を出せるようにするべき。
+まぁ、声を硬くするよりは裏声の方がいい。
