--- a/shared/voice/声色.md
+++ b/shared/voice/声色.md
@@ -76,3 +76,5 @@ https://www.venusinfurbroadway.com/narrater/column/pos698/
 W/X/Yみたいに口先で出すようなぴよぴよした声で歌う曲も最近よくある。
 
 基本の柔らかくて綺麗な声がより綺麗に出せるほど、それ以外の声色も際立つ。
+
+変に作ったような声は違和感がある。
