--- a/shared/respect/無視.md
+++ b/shared/respect/無視.md
@@ -31,3 +31,5 @@ Twitter で誰かをブロックするような人は尊重の気持ちが欠け
 性能が低い人ほど無視しているものも多い。多くのものに注意を向けるキャパシティがない。
 
 批判するのも称賛するのも関心がある。無視するのが一番良くない。
+
+大人にとっては悪いことであっても、子供には「関心を引く」こと自体がメリットになってしまうことがある。
