--- a/shared/human/being/well/幸せになる.md
+++ b/shared/human/being/well/幸せになる.md
@@ -16,3 +16,6 @@
 愛や執着が関わると、自ら問題を複雑にしてしまう。
 まず執着を手放すのが幸せになるための第一歩。
 ただ、その複雑さが人間味でもある。
+
+給与はある程度まで幸福度に直結する。
+他人の倍くらい稼げるとあとは横ばいではあるけど、自分を高く評価してくれる職場＝給料が高い職場で働いた方が幸福になりやすい。
