--- a/shared/logic/正しさ.md
+++ b/shared/logic/正しさ.md
@@ -31,7 +31,9 @@
 例えば、勝つための正しい行いとは、勝てる動きを身につけることだ。
 
 - 誰にとっての正しさか
-- どれくらいの時間的スパンで正しいと言えるか
+- どのくらい正しいのか
+  - どれくらいの時間的スパンで正しいと言えるか
 - 自分の行動に反映させていいか
+- 他人に勧めるべきか
 
 「考え続けるんだ…お前の選択が間違っていないか。その行為だけは正しいと言える事の筈だ…」『東京喰種 :re』
