--- a/shared/trust/信頼.md
+++ b/shared/trust/信頼.md
@@ -499,3 +499,5 @@ https://www.humanvalue.co.jp/keywords/theory-of-success/
 > 「お前のお願いならいいよ」
 >
 > 『四月は君の嘘』
+
+「突然現れた得体の知れない隣人が人の心を掴むには『愛（ものがたり）が必要』ということよ」『悪役令嬢の中の人』
