--- a/shared/choice/value/価値.md
+++ b/shared/choice/value/価値.md
@@ -266,3 +266,6 @@ Not for you.
 誰かと戦ってまで手に入れる価値があるかどうか。
 
 創造する人ばかりでは価値が生まれない。価値を生み出すのはそれを愛する人。需要を生み出す人。
+
+価値がない人はわざわざ殺す価値もない。
+害があるなら殺せる時に殺しておいた方がいい。
