--- a/shared/voice/training/tips/声色を変える.md
+++ b/shared/voice/training/tips/声色を変える.md
@@ -4,6 +4,17 @@
 
 声の重さや明るさは声色の部分なので、まずは正しい発声を身につけてからでないと変な癖がついてしまう。
 
+## 変化の方向性
+
+- 硬くする（柔らかいのがデフォルト）
+- 軽くする/重くする
+  - 明るくする/暗くする
+- 太くする/細くする
+- 震わせる（震えないのがデフォルト）
+- 息を漏らす（息が漏れないのがデフォルト）
+- 雑音を加える（雑音が少ないのがデフォルト）
+- こもらせる（こもらないのがデフォルト）
+
 ## 声色を変える方法
 
 - 声帯を開いて息を漏らす（裏声、ウィスパーボイス）
