--- a/shared/production/生産性.md
+++ b/shared/production/生産性.md
@@ -41,3 +41,5 @@ achievement について知らないといけない。
 生産がベースにあって、「どれだけ価値を生み出したか」が効果になる。
 
 根本的に生物には生産性がないのが普通なので、生産性が少しでもあったら自分を誇っていい。生産性がなくても罪悪感を持たなくていい。
+
+生産性がなくてもやるべきことはある。復讐だったり、息抜きだったり。心の澱みを取ることで、結果的に生産性につながることもある。
