--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの起き攻め.md
@@ -181,6 +181,10 @@
 - {端} 6MP(+1)
   - LP/2LP, 2LP, ...
 
+## 垂直HJ 空バニ: 44
+
+## 前方HJ 空バニ: 43
+
 ## HJ OD空バニ: 41
 
 - ステップ
@@ -240,15 +244,17 @@
 
 ## SA3: 21
 
-- 強セイスモ: 無敵技以外で割り込めない
+- 強セイスモ: 遠いし無敵技以外で割り込めない
 - セイスモフェイント: -6
 - DR HP, 強サンダーC
   - {ガード}: 後退がシミーになる投げ間合いで+3
 - DR 2HP
   - 強サンダーC: ガードされても投げ間合いの外で+3
-- 前HJ.HK: 最速無敵技が裏に出て当たらない、端でも裏
+- 前HJ.HK: 最速無敵技が裏に出て当たらない、端でも裏落ち
 - {端}
   - DI: 投げやジャンプで割り込めない
+
+BOしそうなら前HJ.HKと空ジャンプ投げの択で削り切ってもいい。
 
 ## CA: 23
 
