--- a/shared/hobby/趣味.md
+++ b/shared/hobby/趣味.md
@@ -24,3 +24,18 @@
 「俺のこだわりは俺だけのもんだろ？」
 「他人の土くれまで口を出すより、自分の土くれこねくり回してる方が俺は楽しいね。」
 『ふたりソロキャンプ』
+
+こだわりを持っているだけでは趣味とはいえない。こだわりを追求するのが趣味。
+
+趣味を持つということは、こだわりを追求するということでもある。
+
+本を読むだけでは趣味とは言えないが、自分の好みの本を探していくことは趣味だ。
+
+趣味と娯楽は異なる。
+娯楽は単に楽しんだり、誰かを喜ばせたりするためのもの。
+
+趣味は芸術と関わりが深いけど、直接的ではない。単純に、趣味として芸術や技術にこだわる人がいる。
+
+部屋の中に好きなものを飾ったり好みの家具や家電で揃えたりするのも趣味。部屋の内装にこだわっている。
+
+こだわりがないということは、執着がないということ。
