--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーのコンボ.md
@@ -268,3 +268,6 @@ HP(pc), 強サンダーC, 2HPルートはクソ減る。差し返しで狙える
 セイスモ, JC 強空バニは中空バニでも可。
 
 ヴァイパーはとりあえず大パンセイスモに繋げておけばどのSAにも繋がるのがえらい。
+
+最近プロのヴァイパーがノーゲージの2MPの締めをセビにしてる。
+バニやサンダーを派生しないならセビが一番状況はいい。ただ、モダンだと火力が落ちてしまう。
