--- a/games/Street-Fighter/Six/守りの基本.md
+++ b/games/Street-Fighter/Six/守りの基本.md
@@ -207,3 +207,8 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 長くて早い小パン中パンを持っているキャラは守りが強い。
 
 ラッシュにパリィを押すのは投げもあるのでよくない。まぁ、癖じゃなくて読み合いとして中段とか遅いラッシュを狙うのは無しではない。
+
+ド密着から下がるのはどのキャラでも流石に10Fくらいかかるので、ド密着まで近づいて投げてくるなら投げ抜けしてもいい。
+ただ、それを見越してバクステしてくる場合もあるのでそこは読み合い。
+
+ラグいと特に投げ抜けは危険。
