--- a/games/Street-Fighter/Six/characters/Viper/ヴァイパーの相性.md
+++ b/games/Street-Fighter/Six/characters/Viper/ヴァイパーの相性.md
@@ -1,3 +1,8 @@
+## きついキャラ
+
+- ジェイミー
+- ダルシム
+
 ## JP
 
 起き攻めの垂直低空バニでアムネジアにもだいたい勝てる。
@@ -5,3 +10,12 @@
 ## ザンギエフ
 
 ザンギはSA2も3も低空バニで勝てる。
+
+## ダルシム
+
+技が長くてセイスモ使いにくい。強なら読み合い。
+ただ、中距離から中空バニで無理やり触ってもいい。HJ無しで十分。直接HJで突っ込むのもいい。
+
+## ジェイミー
+
+セビも割られるし突進技もあって差し合いきつい。
