--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -53,3 +53,10 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 音を揃えるための出だしをアインザッツという。
 
 作詞や作曲のアイデアを残すべき。
+
+音楽は単なる聴覚芸術ではない。
+光が点滅しているだけでも音楽だし、音がなくてもダンスなどで音楽は表現できる。
+
+耳が聴こえてなくても音楽はある。
+
+音楽の核は、レガートや進行感と呼ばれるもの。何かが続いていく、進んでいく感じ。
