--- a/shared/change/変化.md
+++ b/shared/change/変化.md
@@ -43,3 +43,14 @@ https://logmi.jp/tech/articles/330391
 理解していないものを破壊してはならない。
 
 世界や社会を変えようとすると失敗も多くある。それはそれで失敗しすぎると絶望することになる。ちょっとした変化を目指して、成功体験を積み重ねないといけない。その上で簡単すぎても飽きるので、適度に失敗するくらいの難易度がちょうどいい。
+
+不安定さを受け入れないと変われない。
+
+変わらないと生き残れない。
+
+長く生き残るのは、変われる生き物だ。
+
+成功と変化は切り離せない。
+成功というのは変化から始まる。
+変化しないと、成功も失敗もない。
+いつまでも続く同じ日常には成功も失敗もない。
