--- a/shared/finance/tips/収入を安定させる.md
+++ b/shared/finance/tips/収入を安定させる.md
@@ -9,3 +9,5 @@
 自分が働けなくなっても不労所得がある状態。
 
 定期収入があると生活の不安はなくなるから、収入の範囲なら支出で悩まなくていい。収入の範囲ならいずれ補填される。
+
+安定収入があっても、大きくなるために足りないなら、不安定でも稼ぎの大きいビジネスが必要になる。並行して進める。
