--- a/shared/development/開発.md
+++ b/shared/development/開発.md
@@ -176,3 +176,5 @@ discovery, 発見・探索も関連する。
 格ゲーなんかもスト６で女性プレイヤーが増えてから大会の上位にも女性プレイヤーが入ってきてる。
 
 開発の目標は発達であり、もっというと卓越。周りに埋もれてしまってはいけない。まぁ、最低限周りに追いつくところから始まるのもまた事実。
+
+より良いもの、優れたものを探求する。
