--- a/shared/voice/良い声とは.md
+++ b/shared/voice/良い声とは.md
@@ -71,3 +71,6 @@ http://hira0888.life.coocan.jp/asu124.html
 オペラの練習方法は、みんながリコーダーで演奏するのを、自分だけグランドピアノやパイプオルガンにする練習だ。
 
 息が抜けていくような歌い方を標準にするべきではない。まずはちゃんと力を入れて歌えるようにする。
+
+良い声とは肺活量のある、強い息の声。
+良い声を出す練習というのは、息を強くして、喉で邪魔しないための練習。せっかく息が強くても喉が締まって邪魔したら生かしきれない。
