--- a/shared/training/練習の順序.md
+++ b/shared/training/練習の順序.md
@@ -38,3 +38,5 @@
 まずは技術に気を払わなくても使える段階を目指す。
 格ゲーだったら運指とか、ボタンやコマンドを意識せずに選べるとか。
 その中でも全て一気にはできないので、優先度を決めて、一度に練習できること以外は後回しにする。
+
+楽しさを学んだら、まずは同じことを同じように繰り返せるのが全ての基礎。アレンジや応用はその後。繰り返し使えるからこそ基礎。ただ、それだけでは飽きやすいので、応用や実践も早めに取り入れる。重要な技術は限られるけど、まずは危険の少ないものを満遍なく触ってみる。
