--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -326,3 +326,7 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 芸術は仕事の延長。何らかの力を制御する技術が基礎になる。
 
 技術がないと、芸術も疎かになりやすい。
+
+ニーズに合わせないと売れないのはアーティストとは言えない。自分に合わせてニーズを作る。
+
+プロのアーティストとして生きるには、市場を作れないといけない。
