--- a/shared/production/product/development/製品開発の流れ.md
+++ b/shared/production/product/development/製品開発の流れ.md
@@ -16,3 +16,9 @@
 - 出荷・配信
 
 これらはウォーターフォールのように上から下に流れるというよりも、何度も繰り返すものだ。
+
+製品開発は、作る、試す、正す、の順序。まず作らないとうまくいかない。
+
+量産や出荷は製品開発というよりも実際にビジネスに載せたところかも。
+
+早い段階で設計を進めすぎてはいけない。まず動くものを作って、それから量産やメンテナンスがしやすいように直していく。あまり後回しにすると大変なのでこまめに設計する。
