--- a/shared/success/risk/management/リスクのバランス.md
+++ b/shared/success/risk/management/リスクのバランス.md
@@ -22,3 +22,42 @@
 リスクを抑えるには、どこかでリスクを冒して情報を手に入れるしかない。
 情報を得るには検証がいちばんの手段。
 情報がないところで情報を得ようとするわけだから、必然、検証にはリスクが伴う。
+
+儲けを減らしてリスクを削るのは、状況によって悪い方に転ぶことも多い。
+
+リスクマネジメントは情報を得る＝リスクを下げるのが全てではない。
+リスクがあっても、どこかで決断する。
+
+リスクはチャンスでもある。
+思いがけない損失があるのと同時に、思いがけない利益もある。
+
+何が起こるかわからなくても、その場で対処ができればなんとかなる。
+わかってなかったとしても、そんなに突飛な状況になることはあまりない。
+
+リスクを抑えるのにコストがかかりすぎたり、無難すぎて需要がなくなったりすると意味がない。
+
+必要なリスクは取らないといけない。
+
+リスクはゼロにならない。
+簡単にリスクを下げられるところは優先して下げて、どこかで妥協する。
+
+情報がリスクを下げる。
+
+リスクを避けるだけが最適とは限らない。時にはメリットのあるリスクを取ることが最適になる。
+
+生きるための安定した仕事と、不安定だがリターンの大きな仕事を両方持っておくと便利。
+重要なのはまず死なないこと。死なないための最低限の仕事は、安定していた方がいい。
+それとは別に、競争に勝つための挑戦的な仕事がある。ただ安定しているだけの仕事では競争に勝てない場合がある。
+
+生存と生殖の関係に近い。
+
+リスクを取るのは競争に勝つため。
+ただ生きていても、競争に負けて淘汰されることがある。
+
+生きるための最低ラインは安定した仕事で稼ぎたい。
+その上で、不安定でも挑戦的な仕事で大きく稼げるといい。
+
+生きるための最低ラインはどこか。
+正社員や準委任のように比較的安定した仕事でいくら稼げばいいか。
+
+生存するだけならリスクを避けた方がいいけど、競争に勝ったり生殖したりするためにはリスクを取った方がいい。バランスが大事。リスクを取りすぎて死んだら元も子もないけど、リスクを取らないと淘汰される。
