--- a/shared/success/risk/management/リスクを取る.md
+++ b/shared/success/risk/management/リスクを取る.md
@@ -31,3 +31,6 @@ https://note.com/simplearchitect/n/n4a337f137626
 どのような情報があっても出会ってしまったらどうしようもない。諦めるしかない。
 
 リスクは、取るか取らないかというより、どこまで取るかまで考える。
+
+リスクを負うなら勝ち筋が必要。
+勝ち筋がないのにリスクを負っても無駄。
