--- a/shared/care/responsibility/tips/自由.md
+++ b/shared/care/responsibility/tips/自由.md
@@ -92,3 +92,5 @@
 まぁ、物理法則などから外れているように見えても実際は法則に従っていることもある。空を飛ぶとか。
 
 自由に生きるためには暴力と財力の両面を備えないといけない。誰かに援助されずとも、妨害されたとしても、生き残ること。そうすれば誰かの思惑に左右されることもない。
+
+自由を求めてしまうと自由ではない。自由は「ある」ものでしかない。
