--- a/games/Street-Fighter/Six/characters/Ryu/リュウの対策.md
+++ b/games/Street-Fighter/Six/characters/Ryu/リュウの対策.md
@@ -30,3 +30,5 @@ ODならこちらもDリバで返せばいい。
 破掌撃が2ヒットしたら強。それ以外は-3か-6なので、6F以内の技で切り返すといい。
 
 リュウ相手は普通に攻撃を受けているとすぐBOしてしまうので、見てからパリィ、できればインパクトにいけるならインパクトを狙うのが大事。特に強足刀、強波掌はインパクトで返したい。
+
+鳩尾砕きは見てからジャストパリィできると一番いい。2段ヒットなので、ジャスパしたら5F技で割り込む。
