--- a/games/Street-Fighter/Six/characters/Zangief/ザンギエフの対策.md
+++ b/games/Street-Fighter/Six/characters/Zangief/ザンギエフの対策.md
@@ -5,7 +5,11 @@
 前歩きに中足ラッシュを差し込んで、ゲージを使ったら下がるのが基本。
 ザンギエフは積極的にゲージを使いづらい。
 
-## SA3
+## 頭突きの対策
+
+できれば見てからジャストパリィしたい。最低でもパリィしたい。ただ、投げなんかもあるので難しい。
+
+## SA3の対策
 
 11-13F詐欺がSA3とODダブラリの両方を避けて攻撃できる。
-SA3は無敵が切れたところで当たるかお互いに空振りなので、いつも通りジャンプの後はガードか、SA3を出さなかったら暴れ読みでバックジャンプとか。
+SA3は無敵が切れたところで当たるかお互いに空振りなので、いつも通りジャンプの後はガードを入れておいてからガードを見て固めてジャンプか、SA3を出さなかったら暴れ読みでバックジャンプとか。
