--- a/shared/communication/channels/sex/セックス.md
+++ b/shared/communication/channels/sex/セックス.md
@@ -53,3 +53,13 @@
 前戯は思てる倍。
 
 セックスは相手と肉体的にくっつきたい感覚の延長。
+
+段階を踏む。
+
+軽く手や肩に触れる。
+肩や腰を抱く。
+イチャイチャしながら体を触る。くすぐりとか。
+胸や股などの敏感な部分に移っていく。十分に盛り上げる。
+相手にも性器を触ってもらう。
+前戯。
+挿入。まずはゆっくり。
