--- a/shared/change/変化.md
+++ b/shared/change/変化.md
@@ -54,3 +54,7 @@ https://logmi.jp/tech/articles/330391
 成功というのは変化から始まる。
 変化しないと、成功も失敗もない。
 いつまでも続く同じ日常には成功も失敗もない。
+
+変化の途中は不安定になりがち。いや、不安定な状態そのものが変化と言えるかも。
+
+「私は今、変化の途中にある。」『ワールドイズダンシング』
