--- a/shared/communication/優しさ.md
+++ b/shared/communication/優しさ.md
@@ -1,4 +1,4 @@
-Kindness
+# Kindness
 
 優しさとは傷つけないこと。当たりの柔らかさ。
 
@@ -23,3 +23,13 @@ Kindness
 優しい人ほど嘘が上手い。
 
 優しく接するか、雑に接するか。相手を切り捨てる時は優しくなくていい。
+
+優しい人は、人当たりが柔らかい人。争いを避ける傾向にある。
+
+他人のことがどうでもいい人と優しい人は見分けにくい。
+
+誰かと争うことに躊躇がない人はどうか。
+
+争うことと、傷つけることは必ずしもイコールではない。
+
+仲間を傷つけられることに怒って争うこともある。
