--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -172,3 +172,5 @@ Lose-WinをLose-Loseに持ち込む。
 競合した相手を「敵」と見做した時点で、暴力的であろうと平和的であろうと戦争は起きる。平和的な戦争。
 
 負けそうになって戦い方を変えるなら、初めからそのように戦っていればいい。すでに負けている。
+
+戦争は争いや競合を解決する手段の一つでしかない。
