--- a/shared/art/芸術.md
+++ b/shared/art/芸術.md
@@ -330,3 +330,5 @@ https://ja.wikipedia.org/wiki/%E9%BB%92%E3%81%AE%E6%AD%A3%E6%96%B9%E5%BD%A2
 ニーズに合わせないと売れないのはアーティストとは言えない。自分に合わせてニーズを作る。
 
 プロのアーティストとして生きるには、市場を作れないといけない。
+
+「よい」を追求する。
