--- a/shared/decision/重要性.md
+++ b/shared/decision/重要性.md
@@ -18,3 +18,6 @@
 大事なことは少ない。
 
 重要度は「なぜやるのか」を考えて、それが目的と一致している度合いで決まる。理由があっても目的と合わないなら重要ではない。
+
+重要性を決める基準は人によって異なる。
+組織では、基準をできるだけ揃えることで各々が判断しても同じ結果になる。
